added luxon.js updated tabulator to version 5.5.2

--- a/src/Modules/Laser.Orchard.StartupConfig/Views/EditorTemplates/Fields/JsonDataTable.cshtml
+++ b/src/Modules/Laser.Orchard.StartupConfig/Views/EditorTemplates/Fields/JsonDataTable.cshtml
@@ -3,6 +3,8 @@
 @{
     Style.Require("tabulator").AtHead();
     Script.Require("tabulator").AtHead();
+    Script.Require("luxon").AtHead();
+    
 
     var settings = Model.PartFieldDefinition.Settings.GetModel<JsonDataTableFieldSettings>();
     var columns = settings.ColumnsDefinition;
