--- a/src/Modules/Laser.Orchard.AdvancedSearch/Views/Admin/List.cshtml
+++ b/src/Modules/Laser.Orchard.AdvancedSearch/Views/Admin/List.cshtml
@@ -228,6 +228,20 @@
             <div class="box-body">
                 <div class="row">
                     <div class="col-sm-6 row">
+                        <label class="ml-3 col-form-label align-right gray-label"><input type="checkbox" class="check-all">@T("Select all")</label>
+                        <span class="col-form-label pl-2 pr-2"> | </span>
+                        <label class="col-form-label align-right gray-label">@T("Builk actions:")</label>
+                        <div class="col-sm-8">
+                            <select id="publishActions" name="Options.BulkAction">
+                                @Html.SelectOption((ContentsBulkAction)Model.Options.BulkAction, ContentsBulkAction.None, T("Choose action...").ToString())
+                                @Html.SelectOption((ContentsBulkAction)Model.Options.BulkAction, ContentsBulkAction.PublishNow, T("Publish Now").ToString())
+                                @Html.SelectOption((ContentsBulkAction)Model.Options.BulkAction, ContentsBulkAction.Unpublish, T("Unpublish").ToString())
+                                @Html.SelectOption((ContentsBulkAction)Model.Options.BulkAction, ContentsBulkAction.Remove, T("Delete").ToString())
+                            </select>
+                            <button type="submit" id="applyManageContentBtn" name="submit.BulkEdit" value="yes">@T("Apply")</button>
+                        </div>
+                    </div>
+                    <div class="col-sm-6 row">
                         <label class="col-sm-4 col-form-label align-right gray-label">@T("Content creation:")</label>
                         @{
                             if (!String.IsNullOrWhiteSpace((string)Model.Options.SelectedFilter)) {
@@ -240,18 +254,6 @@
                                 @Html.ActionLink(createLinkText.Text, "Create", new { Area = "Contents", Id = (string)Model.Options.SelectedFilter }, new { @class = "button primaryAction" })
                             }
                         }
-                    </div>
-                    <div class="col-sm-6 row">
-                        <label class="col-sm-4 col-form-label align-right gray-label">@T("Builk actions:")</label>
-                        <div class="col-sm-8">
-                            <select id="publishActions" name="Options.BulkAction">
-                                @Html.SelectOption((ContentsBulkAction)Model.Options.BulkAction, ContentsBulkAction.None, T("Choose action...").ToString())
-                                @Html.SelectOption((ContentsBulkAction)Model.Options.BulkAction, ContentsBulkAction.PublishNow, T("Publish Now").ToString())
-                                @Html.SelectOption((ContentsBulkAction)Model.Options.BulkAction, ContentsBulkAction.Unpublish, T("Unpublish").ToString())
-                                @Html.SelectOption((ContentsBulkAction)Model.Options.BulkAction, ContentsBulkAction.Remove, T("Delete").ToString())
-                            </select>
-                            <button type="submit" id="applyManageContentBtn" name="submit.BulkEdit" value="yes">@T("Apply")</button>
-                        </div>
                     </div>
                 </div>
             </div>
