--- a/src/Modules/Contrib.Widgets/Views/EditorTemplates/Parts.WidgetsContainer.cshtml
+++ b/src/Modules/Contrib.Widgets/Views/EditorTemplates/Parts.WidgetsContainer.cshtml
@@ -145,7 +145,9 @@
                                                         <div class="col-sm-8">
                                                             <h3 class="display-content">
                                                                 @if (Authorizer.Authorize(Permissions.EditContent, widget) &&
-                                                                        widget.As<LocalizationPart>() != null && widget.As<LocalizationPart>().Culture != null) {
+                                                                                (widget.As<LocalizationPart>() != null ||
+                                                                                    (widget.As<LocalizationPart>() != null && widget.As<LocalizationPart>().Culture != null)
+                                                                                   )) {
                                                                     <a class="margin-left-5"
                                                                        href="@Url.Action("EditWidget", "Admin",
                                                                             new { area = "Contrib.Widgets",
