--- a/src/Modules/Contrib.Widgets/Views/EditorTemplates/Parts.WidgetsContainer.cshtml
+++ b/src/Modules/Contrib.Widgets/Views/EditorTemplates/Parts.WidgetsContainer.cshtml
@@ -35,7 +35,11 @@
     RouteValueDictionary createRouteValues = metadata.CreateRouteValues;
 
     var inCreateRoute = Url.RouteUrl(ViewContext.RouteData.Values) == Url.RouteUrl(createRouteValues);
-
+    var contentItemLocalizationIsComplete = false;
+    var localizationPart = ((ContentItem)contentItem).As<LocalizationPart>();
+    if (localizationPart == null || (localizationPart != null && localizationPart.Culture != null)) {
+        contentItemLocalizationIsComplete = true;
+    }
 }
 @{
     using (Script.Foot()) {
@@ -134,8 +138,7 @@
                                                     int numberLocPart = widget.ContentItem.Parts.Where(x => x.PartDefinition.Name == "LocalizationPart").Count();
                                                     String culture = "";
                                                     if (numberLocPart > 0) {
-                                                        dynamic localizationPart = widget.ContentItem.Parts.Where(x => x.PartDefinition.Name == "LocalizationPart").First();
-                                                        if (localizationPart.Culture != null) {
+                                                        if (localizationPart != null && localizationPart.Culture != null) {
                                                             culture = "(" + localizationPart.Culture.Culture + ")";
                                                         }
                                                     }
@@ -145,9 +148,7 @@
                                                         <div class="col-sm-8">
                                                             <h3 class="display-content">
                                                                 @if (Authorizer.Authorize(Permissions.EditContent, widget) &&
-                                                                                (widget.As<LocalizationPart>() != null ||
-                                                                                    (widget.As<LocalizationPart>() != null && widget.As<LocalizationPart>().Culture != null)
-                                                                                   )) {
+                                                                                contentItemLocalizationIsComplete) {
                                                                     <a class="margin-left-5"
                                                                        href="@Url.Action("EditWidget", "Admin",
                                                                             new { area = "Contrib.Widgets",
@@ -170,27 +171,29 @@
                                                         </div>
                                                         <div class="col-sm-4">
                                                             <div class="widget-action float-right">
-                                                                @if (widget.IsPublished) {
-                                                                    if (widget.HasDraft) {
+                                                                @if (contentItemLocalizationIsComplete) {
+                                                                    if (widget.IsPublished) {
+                                                                        if (widget.HasDraft) {
+                                                                            if (Authorizer.Authorize(Permissions.PublishContent, widget)) {
+                                                                                @Html.Link(T("Publish Draft").Text, Url.Action("Publish", "Admin", new { area = "Contents", id = widget.ContentItem.Id, returnUrl = Request.RawUrl }), new { itemprop = "UnsafeUrl" })
+                                                                                @T(" | ")
+                                                                            }
+                                                                        }
+
                                                                         if (Authorizer.Authorize(Permissions.PublishContent, widget)) {
-                                                                            @Html.Link(T("Publish Draft").Text, Url.Action("Publish", "Admin", new { area = "Contents", id = widget.ContentItem.Id, returnUrl = Request.RawUrl }), new { itemprop = "UnsafeUrl" })
+                                                                            @Html.Link(T("Unpublish").Text, Url.Action("Unpublish", "Admin", new { area = "Contents", id = widget.ContentItem.Id, returnUrl = Request.RawUrl }), new { itemprop = "UnsafeUrl" })
                                                                             @T(" | ")
                                                                         }
                                                                     }
-
-                                                                    if (Authorizer.Authorize(Permissions.PublishContent, widget)) {
-                                                                        @Html.Link(T("Unpublish").Text, Url.Action("Unpublish", "Admin", new { area = "Contents", id = widget.ContentItem.Id, returnUrl = Request.RawUrl }), new { itemprop = "UnsafeUrl" })
-                                                                        @T(" | ")
+                                                                    else {
+                                                                        if (Authorizer.Authorize(Permissions.PublishContent, widget)) {
+                                                                            @Html.Link(T("Publish").Text, Url.Action("Publish", "Admin", new { area = "Contents", id = widget.ContentItem.Id, returnUrl = Request.RawUrl }), new { itemprop = "UnsafeUrl" })
+                                                                            @T(" | ")
+                                                                        }
                                                                     }
-                                                                }
-                                                                else {
-                                                                    if (Authorizer.Authorize(Permissions.PublishContent, widget)) {
-                                                                        @Html.Link(T("Publish").Text, Url.Action("Publish", "Admin", new { area = "Contents", id = widget.ContentItem.Id, returnUrl = Request.RawUrl }), new { itemprop = "UnsafeUrl" })
-                                                                        @T(" | ")
+                                                                    if (Authorizer.Authorize(Permissions.DeleteContent, widget)) {
+                                                                        <a href="#" class="remove-widget" data-confirm="@T("Are you sure you want to delete this widget? Note: the widget will be removed permanently when you save the content item.")">@T("Remove")</a>
                                                                     }
-                                                                }
-                                                                @if (Authorizer.Authorize(Permissions.DeleteContent, widget)) {
-                                                                    <a href="#" class="remove-widget" data-confirm="@T("Are you sure you want to delete this widget? Note: the widget will be removed permanently when you save the content item.")">@T("Remove")</a>
                                                                 }
                                                             </div>
                                                         </div>
