adds autocomplete="new-password" or ="off" to username/email inputs

--- a/src/Themes/KrakeDefaultTheme/Views/OpenAuthLogOn.cshtml
+++ b/src/Themes/KrakeDefaultTheme/Views/OpenAuthLogOn.cshtml
@@ -61,7 +61,7 @@
                 </label>
             </div>
             <div class="space-20"></div>
-            <input type="submit" class="submit" value="@T("Sign In")">
+            <input type="submit" class="btn btn-primary submit" value="@T("Sign In")">
         }
     </div>
 
