--- a/src/Themes/KrakeDefaultTheme/Views/OpenAuthRegister.cshtml
+++ b/src/Themes/KrakeDefaultTheme/Views/OpenAuthRegister.cshtml
@@ -56,7 +56,7 @@
                 @Display(Model.UserProfile)
             }
             <hr>
-            <input type="submit" class="submit" value="@T("Register")">
+            <input type="submit" class="btn btn-primary submit" value="@T("Register")">
         </div>
     }
 </div>
