--- a/src/Themes/KrakeDefaultTheme/Views/Orchard.Users/Account/RequestLostPassword.cshtml
+++ b/src/Themes/KrakeDefaultTheme/Views/Orchard.Users/Account/RequestLostPassword.cshtml
@@ -9,10 +9,10 @@
         <p>@T("Please enter your username or email address. You will receive a link to create a new password via email.")</p>
         <div class='space-20'></div>
         @using (Html.BeginFormAntiForgeryPost(Url.Action("RequestLostPassword"), FormMethod.Post, new { @class = "form-horizontal" })) {
-            @Html.TextBox("username", string.Empty, new { @class = "form-control" })
+            @Html.TextBox("username", string.Empty, new { @class = "form-control", placeholder = T("Enter your username or email address"), autocomplete = "new-password" })
              @Html.ValidationMessage("username")
             <div class="space-20"></div>
-            <input type='submit' class="submit" value='@T("Send Request")'>
+            <input type='submit' class="btn btn-primary submit" value='@T("Send Request")'>
         }
     </div>
 </div>
