Removed notorious class from KrakeAdmin layout.

--- a/src/Themes/KrakeAdmin/Views/Layout.cshtml
+++ b/src/Themes/KrakeAdmin/Views/Layout.cshtml
@@ -82,7 +82,7 @@
         </div>
 
     @if (Model.Navigation != null) {
-        <div id="menubar" class="menubar-inverse puppa">
+        <div id="menubar" class="menubar-inverse">
             @*<div id="menu" class="">*@
             @Zone(Model.Navigation)
         </div>
