Background correction for remove button

--- a/src/Themes/KrakeAdmin/Assets/krakeadmin.scss
+++ b/src/Themes/KrakeAdmin/Assets/krakeadmin.scss
@@ -87,6 +87,16 @@ button, .button, a.button {
     min-width: 110px;
     font-size: $fontsize-default;
     padding: 6px 12px !important;
+
+    &.remove {
+        background-color: #ef2108;
+        border-color: #cc240f;
+        background-image: none;
+
+        &:hover {
+            background-color: #d73925;
+        }
+    }
 }
 
 .widgets-actions {
