- address-configuration.js now correctly checks the existence of the "InvoiceRequest" DOM element - upgrades tabs to new bootstrap version

--- a/src/Modules/Laser.Orchard.NwazetIntegration/Views/EditorTemplates/Parts/Order.AdvancedAddress.cshtml
+++ b/src/Modules/Laser.Orchard.NwazetIntegration/Views/EditorTemplates/Parts/Order.AdvancedAddress.cshtml
@@ -22,8 +22,8 @@
 
 <div class="order-editor advanced-addresses col-md-12 nav-tabs-custom">
     <ul class="nav nav-tabs">
-        <li class="active">
-            <a href="#@shippingId" data-toggle="tab" aria-expanded="true">@T("Shipping Address")</a>
+        <li>
+            <a href="#@shippingId" data-toggle="tab" aria-expanded="true" class="active">@T("Shipping Address")</a>
         </li>
         <li class="">
             <a href="#@billingId" data-toggle="tab" aria-expanded="false">@T("Billing Address")</a>
