Style fix for ContentTypeOptions list position

--- a/src/Modules/Laser.Orchard.StartupConfig/Views/EditorTemplates/Fields/ContentPickerCreateItem.Edit.cshtml
+++ b/src/Modules/Laser.Orchard.StartupConfig/Views/EditorTemplates/Fields/ContentPickerCreateItem.Edit.cshtml
@@ -9,6 +9,14 @@
     WorkContext.TryResolve<IOrchardServices>(out _orchardServices);
 }
 
+@using (Script.Head()) {
+    // Style fix for ContentTypeOptions list position
+    <style type="text/css">
+        .box {
+            position: unset;
+        }
+    </style>
+}
 
 <div id="divCreateNewButton_@Model.nameCPField" class="divCreateNewButton">
     <div id="divCTNewButton_@Model.nameCPField" class="divCTNewButton">
