--- a/src/Themes/KrakeAdmin/Styles/krakeadmin.css
+++ b/src/Themes/KrakeAdmin/Styles/krakeadmin.css
@@ -1651,10 +1651,11 @@ input[type=file] {
   position: relative;
 }
 
+/*
 html.media-library-modal-window #menubar {
-  display: none;
+    display: none;
 }
-
+*/
 html.media-library-modal-window .menubar-pin #base {
   padding-left: 0px;
 }
