fix Media Library display

--- a/src/Themes/KrakeAdmin/Assets/krakeadmin.scss
+++ b/src/Themes/KrakeAdmin/Assets/krakeadmin.scss
@@ -11631,6 +11631,8 @@ ul.widgets h3 {
 
 .media-library-main-list-overlay p {
     margin: 0;
+    display: block;
+
 }
 
 #media-library-main-editor {
