Corrections on media library image sizes

--- a/src/Themes/KrakeAdmin/Styles/krakeadmin.css
+++ b/src/Themes/KrakeAdmin/Styles/krakeadmin.css
@@ -1670,6 +1670,18 @@ html.media-library-modal-window .button-cancel {
   width: unset;
   height: unset;
 }
+#media-library-main-list li .media-thumbnail {
+  min-width: 200px;
+  min-height: 200px;
+  width: unset;
+  height: unset;
+}
+#media-library-main-list li img {
+  min-width: 200px;
+  min-height: 200px;
+  width: unset;
+  height: unset;
+}
 
 #header {
   overflow: visible;
@@ -11357,8 +11369,9 @@ ul.widgets h3 {
 }
 
 /*Media Library*/
-.media-library-main-list-overlay p {
+.media-library-main-list-overlay {
   margin: 0;
+  display: block;
 }
 
 #media-library-main-editor ul.pageStatus {
