--- a/src/Themes/KrakeAdmin/Assets/krakeadmin.scss
+++ b/src/Themes/KrakeAdmin/Assets/krakeadmin.scss
@@ -1762,6 +1762,20 @@ html.media-library-modal-window .button-cancel {
         min-height: 200px;
         width: unset;
         height: unset;
+
+        .media-thumbnail {
+            min-width: 200px;
+            min-height: 200px;
+            width: unset;
+            height: unset;
+        }
+
+        img {
+            min-width: 200px;
+            min-height: 200px;
+            width: unset;
+            height: unset;
+        }
     }
 }
 
@@ -11630,10 +11644,9 @@ ul.widgets h3 {
 }
 /*Media Library*/
 
-.media-library-main-list-overlay p {
+.media-library-main-list-overlay {
     margin: 0;
     display: block;
-
 }
 
 #media-library-main-editor {
