Fixed some CodeViews paths Roughly managed contentType/mimetype for frontend uploads
# Conflicts:
#	src/Themes/KrakeAdmin/Styles/krakeadmin.min.css

--- a/src/Modules/Laser.Orchard.ContentExtension/Views/EditorTemplates/Parts.Navigation.DynamicProjection.Edit.cshtml
+++ b/src/Modules/Laser.Orchard.ContentExtension/Views/EditorTemplates/Parts.Navigation.DynamicProjection.Edit.cshtml
@@ -33,7 +33,7 @@
         <span class="hint">@T("Choose a form to be used as filtering form.")</span>
     }
     else {
-        @T("There are not forms set. Create the first by adding a cshtml file in the /App_Data/Sites/{tenant}/Code folder")
+        @T("There are not forms set. Create the first by adding a cshtml file in the /App_Data/Sites/{tenant}/CodeViews folder")
     }
 </fieldset>
 <fieldset>
@@ -138,7 +138,7 @@
         <span class="hint">@T("Choose a form to be used to render results.")</span>
     }
     else {
-        @T("There are not razors set. Create the first by adding a cshtml file in the /App_Data/Sites/{tenant}/Code folder")
+        @T("There are not razors set. Create the first by adding a cshtml file in the /App_Data/Sites/{tenant}/CodeViews folder")
     }
 </fieldset>
 @*RESULTS FORM END*@
